--- a/src/bz-transaction-manager.ui
+++ b/src/bz-transaction-manager.ui
@@ -5,7 +5,6 @@
   <template class="BzTransactionManager" parent="AdwBin">
     <property name="child">
       <object class="GtkScrolledWindow">
-        <property name="height-request">100</property>
         <property name="hscrollbar-policy">never</property>
         <property name="propagate-natural-height">TRUE</property>
         <property name="child">
@@ -22,252 +21,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <template class="GtkListItem">
-    <property name="activatable">FALSE</property>
     <property name="child">
-      <object class="GtkFrame">
-        <style>
-          <class name="card"/>
-        </style>
+      <object class="BzTransactionView">
+        <property name="margin-start">5</property>
+        <property name="margin-end">5</property>
         <property name="margin-top">10</property>
         <property name="margin-bottom">10</property>
-        <property name="child">
-          <object class="GtkBox">
-            <property name="width-request">250</property>
-            <property name="margin-top">10</property>
-            <property name="margin-bottom">10</property>
-            <property name="margin-start">10</property>
-            <property name="margin-end">10</property>
-            <property name="orientation">vertical</property>
-            <property name="spacing">5</property>
-            <child>
-              <object class="GtkLabel">
-                <style>
-                  <class name="title-3"/>
-                </style>
-                <property name="xalign">0</property>
-                <property name="wrap">TRUE</property>
-                <property name="wrap-mode">word-char</property>
-                <binding name="label">
-                  <lookup name="name" type="BzTransaction">
-                    <lookup name="item">GtkListItem</lookup>
-                  </lookup>
-                </binding>
-              </object>
-            </child>
-            <child>
-              <object class="GtkLabel">
-                <style>
-                  <class name="accent"/>
-                  <class name="heading"/>
-                </style>
-                <property name="margin-start">15</property>
-                <property name="margin-top">15</property>
-                <property name="margin-end">15</property>
-                <property name="xalign">0</property>
-                <property name="wrap">TRUE</property>
-                <property name="wrap-mode">word-char</property>
-                <binding name="label">
-                  <lookup name="status" type="BzTransaction">
-                    <lookup name="item">GtkListItem</lookup>
-                  </lookup>
-                </binding>
-              </object>
-            </child>
-            <child>
-              <object class="GtkLabel">
-                <style>
-                  <class name="error"/>
-                  <class name="heading"/>
-                </style>
-                <property name="margin-start">15</property>
-                <property name="margin-end">15</property>
-                <property name="wrap">TRUE</property>
-                <property name="wrap-mode">word-char</property>
-                <property name="xalign">0</property>
-                <binding name="visible">
-                  <closure function="invert_boolean" type="gboolean">
-                    <lookup name="success" type="BzTransaction">
-                      <lookup name="item">GtkListItem</lookup>
-                    </lookup>
-                  </closure>
-                </binding>
-                <binding name="label">
-                  <lookup name="error" type="BzTransaction">
-                    <lookup name="item">GtkListItem</lookup>
-                  </lookup>
-                </binding>
-              </object>
-            </child>
-            <child>
-              <object class="GtkProgressBar">
-                <property name="hexpand">TRUE</property>
-                <property name="margin-bottom">15</property>
-                <property name="margin-start">15</property>
-                <property name="margin-end">15</property>
-                <binding name="fraction">
-                  <lookup name="progress" type="BzTransaction">
-                    <lookup name="item">GtkListItem</lookup>
-                  </lookup>
-                </binding>
-              </object>
-            </child>
-            <child>
-              <object class="GtkBox">
-                <property name="hexpand">TRUE</property>
-                <property name="orientation">horizontal</property>
-                <property name="homogeneous">TRUE</property>
-                <property name="spacing">10</property>
-                <child>
-                  <object class="GtkBox">
-                    <property name="hexpand">TRUE</property>
-                    <property name="orientation">vertical</property>
-                    <property name="spacing">10</property>
-                    <child>
-                      <object class="GtkLabel">
-                        <style>
-                          <class name="title-4"/>
-                        </style>
-                        <property name="ellipsize">end</property>
-                        <property name="label">To Install</property>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkListView">
-                        <style>
-                          <class name="navigation-sidebar"/>
-                        </style>
-                        <property name="model">
-                          <object class="GtkNoSelection">
-                            <binding name="model">
-                              <lookup name="installs" type="BzTransaction">
-                                <lookup name="item">GtkListItem</lookup>
-                              </lookup>
-                            </binding>
-                          </object>
-                        </property>
-                        <property name="factory">factory</property>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkBox">
-                    <property name="hexpand">TRUE</property>
-                    <property name="orientation">vertical</property>
-                    <property name="spacing">3</property>
-                    <child>
-                      <object class="GtkLabel">
-                        <style>
-                          <class name="title-4"/>
-                        </style>
-                        <property name="ellipsize">end</property>
-                        <property name="label">To Update</property>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkListView">
-                        <style>
-                          <class name="navigation-sidebar"/>
-                        </style>
-                        <property name="model">
-                          <object class="GtkNoSelection">
-                            <binding name="model">
-                              <lookup name="updates" type="BzTransaction">
-                                <lookup name="item">GtkListItem</lookup>
-                              </lookup>
-                            </binding>
-                          </object>
-                        </property>
-                        <property name="factory">factory</property>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkBox">
-                    <property name="hexpand">TRUE</property>
-                    <property name="orientation">vertical</property>
-                    <property name="spacing">3</property>
-                    <child>
-                      <object class="GtkLabel">
-                        <style>
-                          <class name="title-4"/>
-                        </style>
-                        <property name="ellipsize">end</property>
-                        <property name="label">To Remove</property>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkListView">
-                        <style>
-                          <class name="navigation-sidebar"/>
-                        </style>
-                        <property name="model">
-                          <object class="GtkNoSelection">
-                            <binding name="model">
-                              <lookup name="removals" type="BzTransaction">
-                                <lookup name="item">GtkListItem</lookup>
-                              </lookup>
-                            </binding>
-                          </object>
-                        </property>
-                        <property name="factory">factory</property>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-              </object>
-            </child>
-          </object>
-        </property>
-      </object>
-    </property>
-  </template>
-  <object class="GtkBuilderListItemFactory" id="factory">
-    <property name="bytes"><![CDATA[
-<?xml version="1.0" encoding="UTF-8"?>
-<interface>
-  <template class="GtkListItem">
-    <property name="child">
-      <object class="GtkBox">
-        <property name="orientation">horizontal</property>
-        <property name="margin-top">5</property>
-        <property name="margin-bottom">5</property>
-        <property name="spacing">6</property>
-        <child>
-          <object class="GtkImage">
-            <property name="icon-size">large</property>
-            <binding name="paintable">
-              <lookup name="icon-paintable" type="BzEntry">
-                <lookup name="item">GtkListItem</lookup>
-              </lookup>
-            </binding>
-          </object>
-        </child>
-        <child>
-          <object class="GtkLabel">
-            <style>
-              <class name="heading"/>
-            </style>
-            <property name="hexpand">TRUE</property>
-            <property name="xalign">0</property>
-            <property name="ellipsize">end</property>
-            <property name="single-line-mode">true</property>
-            <binding name="label">
-              <lookup name="title" type="BzEntry">
-                <lookup name="item">GtkListItem</lookup>
-              </lookup>
-            </binding>
-          </object>
-        </child>
+        <property name="width-request">350</property>
+        <binding name="transaction">
+          <lookup name="item">GtkListItem</lookup>
+        </binding>
       </object>
     </property>
   </template>
 </interface>
-]]]]><![CDATA[>
-    </property>
-  </object>
-</interface>                
 ]]>
                 </property>
               </object>
