--- a/src/bz-window.ui
+++ b/src/bz-window.ui
@@ -9,134 +9,166 @@
     <property name="width-request">400</property>
     <property name="height-request">750</property>
     <property name="content">
-      <object class="AdwBottomSheet" id="sheet">
-        <property name="bottom-bar">
-          <object class="GtkBox">
-            <property name="height-request">50</property>
-            <property name="orientation">vertical</property>
-            <property name="spacing">5</property>
-            <property name="margin-top">5</property>
-            <property name="margin-bottom">5</property>
-          </object>
-        </property>
-        <property name="sheet">
-          <object class="GtkBox">
-            <property name="orientation">vertical</property>
-            <child>
-              <object class="GtkSeparator">
-                <property name="margin-top">50</property>
-              </object>
-            </child>
-            <child>
-              <object class="BzTransactionManager" id="transaction_mgr"/>
-            </child>
-          </object>
-        </property>
-        <property name="content">
-          <object class="GtkOverlay">
-            <property name="child">
-              <object class="BzBackground" id="background"/>
-            </property>
-            <child type="overlay">
-              <object class="AdwToolbarView">
-                <child type="top">
-                  <object class="AdwHeaderBar">
-                    <child type="start">
-                      <object class="GtkButton" id="refresh">
-                        <property name="icon-name">view-refresh-symbolic</property>
-                      </object>
-                    </child>
-                    <child type="start">
-                      <object class="GtkButton" id="search">
-                        <property name="icon-name">system-search-symbolic</property>
-                      </object>
-                    </child>
-                    <child type="end">
-                      <object class="GtkMenuButton">
-                        <property name="primary">True</property>
-                        <property name="icon-name">open-menu-symbolic</property>
-                        <property name="tooltip-text" translatable="yes">Main Menu</property>
-                        <property name="menu-model">primary_menu</property>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-                <property name="content">
-                  <object class="AdwToastOverlay" id="toasts">
-                    <property name="margin-bottom"
-                              bind-source="sheet"
-                              bind-property="bottom-bar-height"
-                              bind-flags="sync-create"/>
-                    <property name="child">
-                      <object class="GtkBox">
-                        <child>
-                          <object class="AdwSpinner" id="spinner">
-                            <property name="visible">FALSE</property>
-                            <property name="hexpand">TRUE</property>
-                            <property name="vexpand">TRUE</property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="AdwStatusPage" id="status">
-                            <property name="visible">FALSE</property>
-                            <property name="hexpand">TRUE</property>
-                            <property name="vexpand">TRUE</property>
-                            <property name="title">Welcome</property>
-                            <property name="description">Choose an action:</property>
-                            <property name="child">
-                              <object class="GtkGrid">
-                                <property name="halign">center</property>
-                                <property name="column-spacing">48</property>
-                                <property name="row-spacing">18</property>
-                                <child>
-                                  <object class="GtkBox">
-                                    <property name="margin-top">12</property>
-                                    <property name="spacing">12</property>
-                                    <property name="homogeneous">true</property>
-                                    <layout>
-                                      <property name="row">4</property>
-                                      <property name="column">0</property>
-                                      <property name="column-span">2</property>
-                                    </layout>
-                                    <child>
-                                      <object class="GtkButton">
-                                        <property name="label">Search</property>
-                                        <property name="action-name">app.search</property>
-                                        <style>
-                                          <class name="pill"/>
-                                        </style>
-                                      </object>
-                                    </child>
-                                    <child>
-                                      <object class="GtkButton">
-                                        <property name="label">Browse</property>
-                                        <property name="action-name">app.browse</property>
-                                        <style>
-                                          <class name="pill"/>
-                                        </style>
-                                      </object>
-                                    </child>
-                                  </object>
-                                </child>
-                              </object>
-                            </property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="BzBrowseWidget" id="browse">
-                            <property name="visible">FALSE</property>
-                            <property name="hexpand">TRUE</property>
-                            <property name="vexpand">TRUE</property>
-                          </object>
-                        </child>
-                      </object>
-                    </property>
+      <object class="AdwBreakpointBin" id="breakpoint_bin">
+        <property name="width-request">400</property>
+        <property name="height-request">750</property>
+        <property name="child">
+          <object class="AdwBottomSheet" id="sheet">
+            <property name="full-width">FALSE</property>
+            <property name="bottom-bar">
+              <object class="GtkCenterBox">
+                <property name="height-request">40</property>
+                <property name="orientation">horizontal</property>
+                <property name="center-widget">
+                  <object class="GtkProgressBar">
+                    <property name="vexpand">TRUE</property>
+                    <property name="width-request">300</property>
+                    <property name="margin-top">15</property>
+                    <property name="margin-bottom">15</property>
+                    <property name="margin-start">15</property>
+                    <property name="margin-end">15</property>
+                    <binding name="visible">
+                      <lookup name="active">transaction_mgr</lookup>
+                    </binding>
+                    <binding name="fraction">
+                      <lookup name="current-progress">transaction_mgr</lookup>
+                    </binding>
                   </object>
                 </property>
               </object>
-            </child>
+            </property>
+            <property name="sheet">
+              <object class="GtkBox">
+                <property name="orientation">vertical</property>
+                <child>
+                  <object class="GtkSeparator">
+                    <property name="margin-top">50</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="BzTransactionManager" id="transaction_mgr">
+                    <property name="width-request">800</property>
+                  </object>
+                </child>
+              </object>
+            </property>
+            <property name="content">
+              <object class="GtkOverlay">
+                <property name="child">
+                  <object class="BzBackground" id="background"/>
+                </property>
+                <child type="overlay">
+                  <object class="AdwToolbarView">
+                    <child type="top">
+                      <object class="AdwHeaderBar">
+                        <child type="start">
+                          <object class="GtkButton" id="refresh">
+                            <property name="icon-name">view-refresh-symbolic</property>
+                          </object>
+                        </child>
+                        <child type="start">
+                          <object class="GtkButton" id="search">
+                            <property name="icon-name">system-search-symbolic</property>
+                          </object>
+                        </child>
+                        <child type="end">
+                          <object class="GtkMenuButton">
+                            <property name="primary">True</property>
+                            <property name="icon-name">open-menu-symbolic</property>
+                            <property name="tooltip-text" translatable="yes">Main Menu</property>
+                            <property name="menu-model">primary_menu</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    <property name="content">
+                      <object class="AdwToastOverlay" id="toasts">
+                        <property name="margin-bottom"
+                                  bind-source="sheet"
+                                  bind-property="bottom-bar-height"
+                                  bind-flags="sync-create"/>
+                        <property name="child">
+                          <object class="GtkBox">
+                            <child>
+                              <object class="AdwSpinner" id="spinner">
+                                <property name="visible">FALSE</property>
+                                <property name="hexpand">TRUE</property>
+                                <property name="vexpand">TRUE</property>
+                              </object>
+                            </child>
+                            <child>
+                              <object class="AdwStatusPage" id="status">
+                                <property name="visible">FALSE</property>
+                                <property name="hexpand">TRUE</property>
+                                <property name="vexpand">TRUE</property>
+                                <property name="title">Welcome</property>
+                                <property name="description">Choose an action:</property>
+                                <property name="child">
+                                  <object class="GtkGrid">
+                                    <property name="halign">center</property>
+                                    <property name="column-spacing">48</property>
+                                    <property name="row-spacing">18</property>
+                                    <child>
+                                      <object class="GtkBox">
+                                        <property name="margin-top">12</property>
+                                        <property name="spacing">12</property>
+                                        <property name="homogeneous">true</property>
+                                        <layout>
+                                          <property name="row">4</property>
+                                          <property name="column">0</property>
+                                          <property name="column-span">2</property>
+                                        </layout>
+                                        <child>
+                                          <object class="GtkButton">
+                                            <property name="label">Search</property>
+                                            <property name="action-name">app.search</property>
+                                            <style>
+                                              <class name="pill"/>
+                                            </style>
+                                          </object>
+                                        </child>
+                                        <child>
+                                          <object class="GtkButton">
+                                            <property name="label">Browse</property>
+                                            <property name="action-name">app.browse</property>
+                                            <style>
+                                              <class name="pill"/>
+                                            </style>
+                                          </object>
+                                        </child>
+                                      </object>
+                                    </child>
+                                  </object>
+                                </property>
+                              </object>
+                            </child>
+                            <child>
+                              <object class="BzBrowseWidget" id="browse">
+                                <property name="visible">FALSE</property>
+                                <property name="hexpand">TRUE</property>
+                                <property name="vexpand">TRUE</property>
+                              </object>
+                            </child>
+                          </object>
+                        </property>
+                      </object>
+                    </property>
+                  </object>
+                </child>
+              </object>
+            </property>
+            <binding name="reveal-bottom-bar">
+              <lookup name="has-transactions">transaction_mgr</lookup>
+            </binding>
           </object>
         </property>
+        <child>
+          <object class="AdwBreakpoint" id="breakpoint">
+            <condition>max-width: 800px</condition>
+            <setter object="sheet" property="full-width">TRUE</setter>
+            <setter object="transaction_mgr" property="width-request">-1</setter>
+          </object>
+        </child>
       </object>
     </property>
   </template>
