--- a/src/bz-window.ui
+++ b/src/bz-window.ui
@@ -477,10 +477,10 @@
   </template>
   <menu id="primary_menu">
     <section>
-      <item>
-        <attribute name="label" translatable="yes">_Preferences</attribute>
-        <attribute name="action">app.preferences</attribute>
-      </item>
+      <!-- <item> -->
+      <!--   <attribute name="label" translatable="yes">_Preferences</attribute> -->
+      <!--   <attribute name="action">app.preferences</attribute> -->
+      <!-- </item> -->
       <item>
         <attribute name="label" translatable="yes">_Keyboard Shortcuts</attribute>
         <attribute name="action">win.show-help-overlay</attribute>
